# vcpkg_serbian_cpp

./: .gitignore  LICENSE
FileClientWin/: FileClientWin.sln
FileClientWin/FileClientWin/: FileClientWin.cpp  FileClientWin.vcxproj  FileClientWin.vcxproj.filters  client.ixx  filestuff.ixx
FileServerWin/: FileServerWin.sln
FileServerWin/FileServerWin/: FileServerWin.cpp  FileServerWin.vcxproj  FileServerWin.vcxproj.filters  server.ixx  server_detail.ixx
file_client/src/: CMakeLists.txt  main.cpp  vcpkg.json
file_client/src/client/: CMakeLists.txt  client.hpp  client_impl.cpp
file_server/src/: CMakeLists.txt  main.cpp  vcpkg.json
file_server/src/server/: CMakeLists.txt  server.hpp  server_impl.cpp
